--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Maksymilian Paton</title>
-
+    <title>lab2</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="cyk">
-    <h1>Smoki</h1>
-    <h3>O smokach słow kilka</h3>
-    <p><img src="https://static.wikia.nocookie.net/mitologia/images/a/a3/S.jpg/revision/latest/scale-to-width-down/259?cb=20171028105917&path-prefix=pl" alt="Smok!"></p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aspernatur esse ipsa nisi quisquam quod ullam! Deleniti dolore dolores id impedit laboriosam pariatur possimus, quod recusandae soluta vero voluptatum!</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur consequatur dolor ducimus ea, eveniet ipsum minima modi nisi, omnis perferendis porro possimus, repudiandae vitae. Consequatur est in odio porro veritatis.</p>
-</div>
+<nav>
+    <ul>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="quiz.html">Quiz</a></li>
+        <li><a href="map.html">Mapa</a></li>
+        <li><a href="kontakt.html">Kontakt</a></li>
+    </ul>
+</nav>
 
 </body>
 </html>
